# ChatSDK

./: README.md
sdk/include/: ChatGPTProvider.h  DeepSeekProvider.h  LLMProvider.h  common.h
sdk/include/util/: myLog.h
sdk/src/: ChatGPTProvider.cpp  DeepSeekProvider.cpp
sdk/src/util/: myLog.cpp
test/: CMakeLists.txt  testLLM.cpp
